# site

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/workflows/: deploy.yml
custom/overrides/: home.html
custom/overrides/assets/javascripts/: calculate-years.js
custom/overrides/assets/stylesheets/: home.css
data/: modelo100.csv  modelo190_pensiones.csv  modelo390.csv  modelo714.csv
docs/: index.md
docs/assets/data/: salary-distribution.json
docs/javascripts/: salary-app.js
docs/proyectos/: pending.md  salario-en-espana.md
docs/stylesheets/: extra.css
scripts/: build_salary_data.py
