[project]
name = "im-diego.es"
version = "0.1.0"
description = "Static site"
authors = []
readme = "README.md"
license = { text = "" }
requires-python = ">=3.12"
dependencies = ["mkdocs-material>=9.5,<10"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# --- Development ----------------------------------------------------
[tool.poetry.group.dev]
optional = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

# --- Linters & Formatters -------------------------------------------
[tool.poetry.group.lint]
optional = false

[tool.poetry.group.lint.dependencies]
ruff = "^0.14.6"
pyright = { version = "^1.1.407", extras = ["nodejs"] }

# --- Testing --------------------------------------------------------
[tool.poetry.group.tests]
optional = false

[tool.poetry.group.tests.dependencies]
coverage = "^7.8.0"
pytest = "^8.4.1"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.1"

# --- Pyright --------------------------------------------------------
[tool.pyright]
reportArgumentType = "none"
reportMissingTypeStubs = "none"
reportAttributeAccessIssue = "none"

# --- Pytest - Unit Testing ------------------------------------------
[tool.pytest.ini_options]
minversion = "8.3.4"
addopts = "-v --cov=. --cov-branch --cov-report=term-missing"
pythonpath = ["."]
python_files = ["*/test_*.py"]
cache_dir = "/tmp/.pytest_cache"

# --- Coverage - Code coverage ---------------------------------------
[tool.coverage.run]
data_file = "/tmp/.coverage"
relative_files = true
omit = [
    "**/tests/**",
    "**/migrations/**",
    "**/conftest.py",
    "config/*",
]

[tool.coverage.report]
skip_empty = true
fail_under = 80
precision = 2

# --- Ruff - Linting and Formatting ----------------------------------
[tool.ruff]
line-length = 140
target-version = "py311"
indent-width = 4
exclude = [".git", "__pycache__", "docs"]
include = ["*.py", "*.pyi"]
cache-dir = "/tmp/.ruff"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120

[tool.ruff.lint]
# select = ["C", "E", "F", "W", "B", "B950"]
ignore = ["E203", "E501", "W605", "C901"]
